# postman-mcp

./: LICENSE  README.md  mcp.example.json  postman_server.py  pyproject.toml
tests/: __init__.py  test_postman.py
tools/: __init__.py  postman_tools.py  toolhandler.py
