[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postman-mcp"
version = "0.1.0"
description = "Postman MCP Server - 41 tools for Postman API collections, environments, mocks, specs, and workspaces"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "MCP Tools Team" }
]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.12.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
postman-mcp = "postman_server:cli_main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["postman_server"]
packages = ["tools"]
